--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>Tic-Tac-Toe</title>
 </head>
 <body>
+  <header>
+    <h1>Tic-Tac-Toe Game by Mehdi</h1>
+  </header>
   <div class="board" id="board">
     <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
